force-app/main/default/objects/CventEvents__TaskConfiguration__c/CventEvents__TaskConfiguration__c.object-meta.xml
<CustomObject>
    <description>Stores the configuration for the automatic task creation.</description>
    <label>Task Configuration</label>
    <nameField>
        <displayFormat>TC-{00000000}</displayFormat>
        <label>Task Configuration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>