force-app/main/default/objects/CventEvents__TaskConfiguration__c/fields/CventEvents__Description__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__Description__c</fullName>
    <description>Stores the description of the Task Configuration.</description>
    <inlineHelpText>Stores the description of the Task Configuration.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>