force-app/main/default/objects/CventEvents__TaskConfiguration__c/fields/CventEvents__Object__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__Object__c</fullName>
    <description>Name of the Salesforce object which triggers automatic task creation. Can be either Attendee__c or AttendeeActivity__c.</description>
    <inlineHelpText>Name of the Salesforce object which triggers automatic task creation. Can be either Attendee__c or AttendeeActivity__c.</inlineHelpText>
    <label>Object</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>