force-app/main/default/objects/CventEvents__TaskConfiguration__c/fields/CventEvents__TaskActivityDate__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__TaskActivityDate__c</fullName>
    <description>Activity Date of the Task.</description>
    <inlineHelpText>Activity Date of the Task.</inlineHelpText>
    <label>Task Activity Date</label>
    <type>Date</type>
</CustomField>