force-app/main/default/objects/CventEvents__TaskConfiguration__c/fields/CventEvents__TaskDescription__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__TaskDescription__c</fullName>
    <description>Description of the Task.</description>
    <inlineHelpText>Description of the Task.</inlineHelpText>
    <label>Task Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>