force-app/main/default/objects/CventEvents__TaskConfiguration__c/fields/CventEvents__TaskPriority__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__TaskPriority__c</fullName>
    <description>Priority of the Task.</description>
    <inlineHelpText>Priority of the Task.</inlineHelpText>
    <label>Task Priority</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>