force-app/main/default/objects/CventEvents__TaskConfiguration__c/fields/CventEvents__TaskStatus__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__TaskStatus__c</fullName>
    <description>Status of the Task.</description>
    <inlineHelpText>Status of the Task.</inlineHelpText>
    <label>Task Status</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>