force-app/main/default/objects/CventEvents__TaskConfiguration__c/fields/CventEvents__TaskSubject__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__TaskSubject__c</fullName>
    <description>Subject of the Task.</description>
    <inlineHelpText>Subject of the Task.</inlineHelpText>
    <label>Task Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>