force-app/main/default/objects/CventEvents__TaskConfiguration__c/fields/CventEvents__Title__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__Title__c</fullName>
    <description>Stores the title of the Task Configuration.</description>
    <inlineHelpText>Stores the title of the Task Configuration.</inlineHelpText>
    <label>Title</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>